Equation of Lan-Emden

--- a/Lane-Emden Equation.ipynb
+++ b/Lane-Emden Equation.ipynb
@@ -4,6 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# The Lane-Emden equation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Introducing the polytropic equation, the equation of Poisson becomes:\n",
+    "\n",
+    "$$\\frac{1}{\\xi^{2}}\\frac{d}{d\\xi}(\\xi^{2}\\frac{d\\theta}{d\\xi}) = -\\theta^{n}$$\n",
+    "\n",
+    "$$\\frac{1}{\\xi^{2}}(2\\xi\\frac{d\\theta}{d\\xi}+\\xi^{2}\\frac{d^{2}\\theta}{d\\xi^{2}}) = -\\theta^{n}$$\n",
+    "\n",
+    "$$\\frac{2}{\\xi}\\frac{d\\theta}{d\\xi}+\\frac{d^{2}\\theta}{d\\xi^{2}} = -\\theta^{n}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To solve numerically the Lane-Emden equation, we have to do a change of variables, as follows:\n",
+    "\n",
+    "$$\\frac{d^{2}\\theta}{d\\xi^{2}} = -\\theta^{n}-\\frac{2}{\\xi}\\frac{d\\theta}{d\\xi}$$\n",
+    "\n",
+    "$$\n",
+    "Define:\n",
+    "\\begin{cases}\n",
+    "\\theta \\\\\n",
+    "y = \\frac{d\\theta}{d\\xi}\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\rightarrow\n",
+    "\\begin{cases}\n",
+    "\\frac{d\\theta}{d\\xi} = y \\\\\n",
+    "\\frac{dy}{d\\xi} = \\frac{d^{2}\\theta}{d\\xi^{2}} = -\\theta^{n}-\\frac{2}{\\xi}\\frac{d\\theta}{d\\xi} = -\\theta^{n}-\\frac{2}{\\xi}y\n",
+    "\\end{cases}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Solve numerically the Lane-Emden equation"
    ]
   },
